--- a/trunk/ProyectoSI/PruebasAndroid/AndroidManifest.xml
+++ b/trunk/ProyectoSI/PruebasAndroid/AndroidManifest.xml
@@ -6,12 +6,14 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Engine"
                   android:label="@string/app_name">
-            <intent-filter>
+            <activity android:name="es.eadengine.Prueba"></activity><intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
       <activity android:name=".GameLauncher" ></activity>
+
+
 </application>
     <uses-sdk android:minSdkVersion="5" />
 </manifest> 
