--- a/ProyectoSI/data2/.project
+++ b/ProyectoSI/data2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>data2</name>
+	<name>PrototipoRepositorio</name>
 	<comment></comment>
 	<projects>
 	</projects>
