--- a/trunk/ProyectoSI/data2/AndroidManifest.xml
+++ b/trunk/ProyectoSI/data2/AndroidManifest.xml
@@ -16,4 +16,7 @@
     </application>
     <uses-sdk android:minSdkVersion="5" />
 
+
+
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 </manifest> 
