--- a/trunk/EADAndroidEngine/AndroidManifest.xml
+++ b/trunk/EADAndroidEngine/AndroidManifest.xml
@@ -4,13 +4,13 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:label="@string/app_name" android:name="es.eucm.eadandroid.gameLauncher.Engine">
+        <activity android:label="@string/app_name" android:name="es.eucm.eadandroid.gameLauncher.InitSplashActivity">
             <activity android:name="es.eucm.Prueba"></activity><intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-      <activity android:name="es.eucm.eadandroid.gameLauncher.GameLauncher"></activity>
+      <activity android:name="es.eucm.eadandroid.gameLauncher.GameLauncherActivity"></activity>
 
 
 </application>
