--- a/branches/EADAndroidEngine_1/.project
+++ b/branches/EADAndroidEngine_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EADAndroidEngine</name>
+	<name>EADAndroidEngine_1</name>
 	<comment></comment>
 	<projects>
 	</projects>
