--- a/branches/EADAndroidEngine_1/AndroidManifest.xml
+++ b/branches/EADAndroidEngine_1/AndroidManifest.xml
@@ -6,7 +6,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 	
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:theme="@android:style/Theme.NoTitleBar">
+		android:theme="@android:style/Theme.NoTitleBar" android:debuggable="true">
 		
 		<activity android:label="@string/app_name" android:name=".homeapp.InitSplashActivity">
 			
@@ -25,6 +25,7 @@
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter></activity>
+<activity android:name=".ecore.ECoreActivity"  android:screenOrientation="landscape"></activity>
 </application>
 	
 	<uses-sdk android:minSdkVersion="5" />
