--- a/branches/EADAndroidEngine_1/AndroidManifest.xml
+++ b/branches/EADAndroidEngine_1/AndroidManifest.xml
@@ -7,7 +7,7 @@
 	
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:debuggable="true" android:theme="@android:style/Theme.NoTitleBar">
-		<activity android:label="@string/app_name" android:name=".homeapp.ActivityVideoIntro" android:screenOrientation="portrait">
+		<activity android:label="@string/app_name" android:name=".homeapp.ActivityVideoIntro" android:screenOrientation="portrait" android:alwaysRetainTaskState="true">
 		
 			
 			<intent-filter>
