--- a/branches/EADAndroidEngine_1/AndroidManifest.xml
+++ b/branches/EADAndroidEngine_1/AndroidManifest.xml
@@ -31,4 +31,6 @@
 	<uses-sdk android:minSdkVersion="5" />
 
 
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES"></uses-permission>
 </manifest> 
