--- a/branches/EADAndroidEngine_1/AndroidManifest.xml
+++ b/branches/EADAndroidEngine_1/AndroidManifest.xml
@@ -7,7 +7,7 @@
 	
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:debuggable="true" android:theme="@android:style/Theme.NoTitleBar">
-		<activity android:label="@string/app_name" android:name=".homeapp.ActivityVideoIntro" android:screenOrientation="portrait" android:alwaysRetainTaskState="true">
+		<activity android:label="@string/app_name" android:name=".homeapp.ActivityVideoIntro" android:screenOrientation="portrait">
 		
 			
 			<intent-filter>
@@ -16,17 +16,18 @@
 			</intent-filter>
 		</activity>
 		
-		<activity android:name=".homeapp.localgames.LocalGamesActivity" android:launchMode="singleTask" android:alwaysRetainTaskState="true" android:screenOrientation="portrait"></activity>
-		<activity android:name=".homeapp.preferences.PreferencesActivity" android:launchMode="singleTask" android:alwaysRetainTaskState="true" android:screenOrientation="portrait"></activity>
-		<activity android:name=".homeapp.repository.RepositoryActivity" android:launchMode="singleTask" android:alwaysRetainTaskState="true" android:screenOrientation="portrait"></activity>
+		<activity android:name=".homeapp.localgames.LocalGamesActivity" android:screenOrientation="portrait"></activity>
+		<activity android:name=".homeapp.preferences.PreferencesActivity" android:screenOrientation="portrait"></activity>
+		<activity android:name=".homeapp.repository.RepositoryActivity" android:screenOrientation="portrait"></activity>
 		
 		
 	
 <activity android:name=".ecore.ECoreActivity" android:alwaysRetainTaskState="true"  android:screenOrientation="landscape"></activity>
-<activity android:name=".homeapp.HomeTabActivity" android:screenOrientation="portrait"></activity>
+<activity android:name=".homeapp.HomeTabActivity" android:screenOrientation="portrait" android:launchMode="singleTop"></activity>
 <activity android:name=".ecore.EcoreVideo" android:screenOrientation="landscape"></activity>
 <activity android:name=".homeapp.loadsavedgames.LoadSavedGames"  android:screenOrientation="portrait"></activity>
-<activity android:screenOrientation="portrait" android:name=".homeapp.preferences.LaunchAndExplorerActivity"></activity>
+<activity android:screenOrientation="portrait" android:name=".homeapp.preferences.LaunchAndExplorerActivity" android:launchMode="singleTask"></activity>
+
 </application>	
 <uses-sdk android:minSdkVersion="5"/>
 
