--- a/branches/EADAndroidEngine_1/AndroidManifest.xml
+++ b/branches/EADAndroidEngine_1/AndroidManifest.xml
@@ -28,6 +28,7 @@
 <activity android:name=".homeapp.loadsavedgames.LoadSavedGames"  android:screenOrientation="portrait"></activity>
 <activity android:screenOrientation="portrait" android:name=".homeapp.preferences.LaunchAndExplorerActivity" android:launchMode="singleTask"></activity>
 
+<activity android:name=".ecore.ECoreControl"></activity>
 </application>	
 <uses-sdk android:minSdkVersion="5"/>
 
