--- a/branches/EADAndroidEngine_1/AndroidManifest.xml
+++ b/branches/EADAndroidEngine_1/AndroidManifest.xml
@@ -13,6 +13,10 @@
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
+				<data android:scheme="file" />
+        		<data android:mimeType="*/*" />
+        		<data android:pathPattern=".*\\.ead" />
+        		<data android:host="*" />				
 			</intent-filter>
 		</activity>
 
