--- a/trunk/EAdMobileEngine/AndroidManifest.xml
+++ b/trunk/EAdMobileEngine/AndroidManifest.xml
@@ -11,13 +11,15 @@
 		
 		<activity android:name=".homeapp.SplashScreenActivity" android:screenOrientation="portrait">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-				<data android:scheme="file" />
-        		<data android:mimeType="*/*" />
-        		<data android:pathPattern=".*\\.ead" />
-        		<data android:host="*" />				
+				<action android:name="android.intent.action.MAIN" />			
+				<category android:name="android.intent.category.LAUNCHER" />			
 			</intent-filter>
+			<intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="file" android:host="*" android:mimeType="*/*" android:pathPattern=".*\\.ead" />
+            </intent-filter>
 		</activity>
 
 		<activity android:name=".homeapp.localgames.LocalGamesActivity"
@@ -32,7 +34,8 @@
 		<activity android:name=".ecore.ECoreActivity"
 			android:alwaysRetainTaskState="true" android:screenOrientation="landscape"></activity>
 		<activity android:name=".homeapp.HomeTabActivity"
-			android:screenOrientation="portrait" android:launchMode="singleTop"></activity>
+			android:screenOrientation="portrait" android:launchMode="singleTop">				
+		</activity>
 		<activity android:name=".ecore.EcoreVideo"
 			android:screenOrientation="landscape"></activity>
 		<activity android:name=".homeapp.loadsavedgames.LoadSavedGames"
@@ -46,8 +49,10 @@
 	</application>
 	<uses-sdk android:minSdkVersion="5" />
 
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-	<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES"></uses-permission>
-
-	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES" />
+	<uses-permission android:name="android.permission.INTERNET" />	
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+	
 </manifest> 
