--- a/trunk/EAdMobileEngine/.classpath
+++ b/trunk/EAdMobileEngine/.classpath
@@ -5,5 +5,5 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="lib" path="C:/AndroidSDK/Proyectos/android-widget-actionbar.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
