--- a/trunk/EAdMobileEngine/.classpath
+++ b/trunk/EAdMobileEngine/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="C:/AndroidSDK/Proyectos/android-widget-actionbar.jar"/>
+	<classpathentry kind="lib" path="libs/android-widget-actionbar.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
