--- a/trunk/EAdMobileEngine/AndroidManifest.xml
+++ b/trunk/EAdMobileEngine/AndroidManifest.xml
@@ -47,9 +47,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="es.eucm.eadandroid" android:versionCode="1"
 	android:versionName="1.0">
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-
+	
+    <uses-sdk android:minSdkVersion="10" />
+    
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES"/>
+	<uses-permission android:name="android.permission.VIBRATE" />
+    
 	<application android:label="@string/app_name"
 		android:debuggable="true" android:theme="@android:style/Theme.NoTitleBar"
 		android:icon="@drawable/launcher_icon2">
@@ -71,8 +78,8 @@
 			<activity android:name=".homeapp.HomeActivity"></activity>
 		<activity android:name=".homeapp.localgames.LocalGamesActivity"></activity>
 		<activity android:name=".homeapp.preferences.PreferencesActivity"></activity>
+		<activity android:name=".homeapp.preferences.AboutActivity"></activity>
 		<activity android:name=".homeapp.repository.RepositoryActivity"></activity>
-
 
 
 		<activity android:name=".ecore.ECoreActivity"
@@ -87,12 +94,5 @@
 
 
 	</application>
-	<uses-sdk android:minSdkVersion="10" />
-
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES" />
-	<uses-permission android:name="android.permission.INTERNET" />	
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.VIBRATE" />
 	
 </manifest> 
